--- a/libs/block-template-custom-element/package.json
+++ b/libs/block-template-custom-element/package.json
@@ -1,6 +1,6 @@
 {
   "name": "block-template-custom-element",
-  "version": "0.4.6-canary-20240313122533",
+  "version": "0.4.5",
   "description": "Block Protocol block template for a custom element-based block",
   "keywords": [
     "blockprotocol",
@@ -33,16 +33,16 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "@blockprotocol/graph": "0.3.4-canary-20240313122533",
+    "@blockprotocol/graph": "0.3.3",
     "lit": "^2.4.1"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
     "@types/react-dom": "18.0.9",
     "@types/react-is": "18.2.0",
-    "block-scripts": "0.3.5-canary-20240313122533",
+    "block-scripts": "0.3.4",
     "eslint": "8.33.0",
-    "mock-block-dock": "0.1.10-canary-20240313122533",
+    "mock-block-dock": "0.1.9",
     "prettier": "2.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
