--- a/libs/@blockprotocol/hook/package.json
+++ b/libs/@blockprotocol/hook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/hook",
-  "version": "0.1.7",
+  "version": "0.1.8-canary-20240313122533",
   "description": "Implementation of the Block Protocol Hook module specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
@@ -52,8 +52,8 @@
     "lint:tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "@blockprotocol/core": "0.1.2",
-    "@blockprotocol/graph": "0.3.3"
+    "@blockprotocol/core": "0.1.3-canary-20240313122533",
+    "@blockprotocol/graph": "0.3.4-canary-20240313122533"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
