--- a/libs/@blockprotocol/hook/package.json
+++ b/libs/@blockprotocol/hook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/hook",
-  "version": "0.1.8-canary-20240313191438",
+  "version": "0.1.7",
   "description": "Implementation of the Block Protocol Hook module specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
@@ -53,7 +53,7 @@
   },
   "dependencies": {
     "@blockprotocol/core": "0.1.2",
-    "@blockprotocol/graph": "0.3.4-canary-20240313191438"
+    "@blockprotocol/graph": "0.3.3"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
