--- a/libs/@blockprotocol/core/package.json
+++ b/libs/@blockprotocol/core/package.json
@@ -47,7 +47,7 @@
         "./dist/esm/index.d.ts"
       ],
       "html": [
-        "./dist/esm/react.d.ts"
+        "./dist/esm/html.d.ts"
       ],
       "react": [
         "./dist/esm/react.d.ts"
